--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -10,12 +10,28 @@
   <tbody>
     <% books.each do |book| %>
       <tr>
-        <td><%= link_to(book.user) do %>
+        <td>
+          <%= link_to(book.user) do %>
           <%= image_tag book.user.get_profile_image, size:'50x50' %>
           <% end %>
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
+        <td>
+          <% if book.favorited_by?(current_user) %>
+            <%= link_to book_favorites_path(book.id), method: :delete do %>
+              <span style="color:red;">
+                ♥<%= book.favorites.count %>
+              </span>
+            <% end %>
+          <% else %>
+            <%= link_to book_favorites_path(book.id), method: :post do %>
+              <span style="color:blue;">
+                ♥<%= book.favorites.count %>
+              </span>
+            <% end %>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
