--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -31,6 +31,7 @@
               </span>
             <% end %>
           <% end %>
+          コメント数<%= book.book_comments.count %>
         </td>
       </tr>
     <% end %>
