--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,9 +10,10 @@
   		<h2>Book detail</h2>
   		<table class='table'>
   		  <tr>
-          <td><%= link_to(@book.user) do %>
-            <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
-            <%= @book.user.name %>
+          <td>
+            <%= link_to(@book.user) do %>
+              <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
+              <%= @book.user.name %>
             <% end %>
           </td>
           <td><%= link_to @book.title, @book %></td>
@@ -21,6 +22,26 @@
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
+          <td>
+            <% @book.book_comments.each do |book_comment| %>
+              <%= link_to(book_comment.user) do %>
+                <%= image_tag book_comment.user.get_profile_image, size:"100x100" %><br>
+                <%= book_comment.user.name %>
+              <% end %>
+              <td>
+                <%= book_comment.comment %>
+              </td>
+            <% end %>
+          </td>
+          <% if @book.user == current_user %>
+            <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
+          <% end %>
+          <td>
+            <%= form_with model: [@book, @book_comment] do |f| %>
+              <%= f.text_area :comment, rows: '5' %>
+              <%= f.submit "送信する" %>
+            <% end %>
+          </td>
         </tr>
       </table>
     </div>
