--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -33,11 +33,13 @@
               <td>
                 <%= book_comment.comment %>
               </td>
+              <td>
+                <% if @book.user == current_user %>
+                  <td><%= link_to 'Destroy', book_comment_path, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
+                <% end %>
+              </td>
             <% end %>
           </td>
-            <% if @book.user == current_user %>
-              <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
-            <% end %>
         </tr>
         <tr>
           <td>
